--- a/app/style/_header.scss
+++ b/app/style/_header.scss
@@ -10,6 +10,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    color: $color2;
     }
     // Mobile Menu
     &__menu{
@@ -17,7 +18,7 @@
             display: block;
             width: 26px;
             height: 2px;
-            background-color: $color2;
+            background-color: $color3;
 
         &:not(:last-child){
             margin-bottom: 3px;
