--- a/app/style/_globals.scss
+++ b/app/style/_globals.scss
@@ -44,14 +44,18 @@ button{
     font-size: 0.8125rem;
 }
 
+
+
 // Visibility
 // Hide for tablets and mobile devices
 .hide-for-mobile{
-   @include breakpoint-down(small){
+   @include breakpoint-down(medium){
     display: none;
    }
 }
   // Hide for Desktop
 .hide-for-desktop{
-   
+    @include breakpoint-up(large){
+        display: none;
+       }
 }
