--- a/app/style/_header.scss
+++ b/app/style/_header.scss
@@ -1,6 +1,7 @@
 .header{
     nav{
-        padding: 24px;
+        padding: 1.9375rem 2rem;
+        border-bottom: 0.04375rem solid $color4;
     }
 
 
@@ -19,15 +20,37 @@
             width: 26px;
             height: 2px;
             background-color: $color3;
-
+            transition: all 300ms ease-in-out;
+            transform-origin:  left center;
         &:not(:last-child){
             margin-bottom: 3px;
+        }
+        &.open{
+            > span:first-child{
+                transform: rotate(45deg);
+            }
+            > span:nth-child(2){
+                opacity: 0;
+            }
+            > span:last-child{
+                transform: rotate(-45deg);
+            }
         }
         }
     }
     &__links{
         a{
-         font-size: $font-sm;   
+            position: relative;
+         font-size: $font-md; 
+         color: $color3;  
+         transition:  color 200ms ease-in-out;
+
+            &:not(:last-child){
+                margin-right: 42px;
+            }
+            &:hover{
+                color: $color2;
+            }
         }
     }
 
