--- a/app/style/_header.scss
+++ b/app/style/_header.scss
@@ -1,4 +1,33 @@
 .header{
+
+    // Open Hambugger Style
+&.open {
+    .overlay{
+        animation: fade-in 400ms ease-in-out forwards;
+    }
+    .header__menu{ 
+            > span:first-child{
+        transform: rotate(45deg);
+    }
+    > span:nth-child(2){
+        opacity: 0;
+    }
+    > span:last-child{
+        transform: rotate(-45deg);
+    }
+    }
+}
+.overlay{
+    display: none;
+    position: fixed;
+    top: 5.75rem;
+    left: 0;
+    right: 0px;
+    bottom: 0px;
+    background-color: #1090CB1A;
+
+}
+
     nav{
         padding: 1.9375rem 2rem;
         border-bottom: 0.04375rem solid $color4;
@@ -21,22 +50,15 @@
             height: 2px;
             background-color: $color3;
             transition: all 300ms ease-in-out;
-            transform-origin:  left center;
+            transform-origin: 3px 1px;
+
+
         &:not(:last-child){
             margin-bottom: 3px;
         }
-        &.open{
-            > span:first-child{
-                transform: rotate(45deg);
-            }
-            > span:nth-child(2){
-                opacity: 0;
-            }
-            > span:last-child{
-                transform: rotate(-45deg);
-            }
-        }
-        }
+    }
+       
+        
     }
     &__links{
         a{
@@ -54,5 +76,6 @@
         }
     }
 
-
 }
+
+
