--- a/app/style/style.css
+++ b/app/style/style.css
@@ -1,3 +1,4 @@
+@import url();
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -57,6 +58,24 @@ button {
   }
 }
 
+.header.open .header__menu > span:first-child {
+  transform: rotate(45deg);
+}
+.header.open .header__menu > span:nth-child(2) {
+  opacity: 0;
+}
+.header.open .header__menu > span:last-child {
+  transform: rotate(-45deg);
+}
+.header .overlay {
+  display: none;
+  position: fixed;
+  top: 5.75rem;
+  left: 0;
+  right: 0px;
+  bottom: 0px;
+  background-color: rgba(16, 144, 203, 0.1019607843);
+}
 .header nav {
   padding: 1.9375rem 2rem;
   border-bottom: 0.04375rem solid #C4C4C4;
@@ -75,19 +94,10 @@ button {
   height: 2px;
   background-color: #000;
   transition: all 300ms ease-in-out;
-  transform-origin: left center;
+  transform-origin: 3px 1px;
 }
 .header__menu > span:not(:last-child) {
   margin-bottom: 3px;
-}
-.header__menu > span.open > span:first-child {
-  transform: rotate(45deg);
-}
-.header__menu > span.open > span:nth-child(2) {
-  opacity: 0;
-}
-.header__menu > span.open > span:last-child {
-  transform: rotate(-45deg);
 }
 .header__links a {
   position: relative;
