--- a/app/style/_header.scss
+++ b/app/style/_header.scss
@@ -2,9 +2,7 @@
 
     // Open Hambugger Style
 &.open {
-    .overlay{
-        animation: fade-in 400ms ease-in-out forwards;
-    }
+  
     .header__menu{ 
             > span:first-child{
         transform: rotate(45deg);
@@ -18,18 +16,20 @@
     }
 }
 .overlay{
-    display: none;
+    opacity: 0;
     position: fixed;
     top: 5.75rem;
     left: 0;
     right: 0px;
     bottom: 0px;
     background-color: #1090CB1A;
+    &.fade-in{
 
+    }
 }
 
     nav{
-        padding: 1.9375rem 2rem;
+        padding: 1.9375rem 1.8rem;
         border-bottom: 0.04375rem solid $color4;
     }
 
