--- a/app/style/style.css
+++ b/app/style/style.css
@@ -1,4 +1,38 @@
-@import url();
+@keyframes fade-in {
+  from {
+    visibility: hidden;
+    opacity: 0;
+  }
+  1% {
+    visibility: visible;
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.fade-in {
+  animation: fade-in 400ms ease-in-out forwards;
+}
+
+@keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  99% {
+    visibility: visible;
+    opacity: 0;
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+.fade-out {
+  animation: fade-in 400ms ease-in-out forwards;
+}
+
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -68,7 +102,7 @@ button {
   transform: rotate(-45deg);
 }
 .header .overlay {
-  display: none;
+  opacity: 0;
   position: fixed;
   top: 5.75rem;
   left: 0;
@@ -77,7 +111,7 @@ button {
   background-color: rgba(16, 144, 203, 0.1019607843);
 }
 .header nav {
-  padding: 1.9375rem 2rem;
+  padding: 1.9375rem 1.8rem;
   border-bottom: 0.04375rem solid #C4C4C4;
 }
 .header__logo {
