in programming everything might not go as planned, but you must be able to twerk it out and make the best of the situation

--- a/app/style/_globals.scss
+++ b/app/style/_globals.scss
@@ -17,6 +17,12 @@ body{
 a, a:visited, a:hover{
     text-decoration: none;
 }
+
+//spacing
+.container {
+    padding-left: 1.5rem;
+    padding-right:  1.5rem;
+}
 .flex{
     display: flex ;
     &-jc-sb{ 
