--- a/app/style/_animations.scss
+++ b/app/style/_animations.scss
@@ -1,5 +1,42 @@
+// @keyframes fade-in {
+//     from{
+//         visibility: hidden;
+//         opacity: 0;
+//     }
+//     1%{
+//         visibility: visible;
+//         opacity: 0;
+//     }
+//     to{
+//         opacity: 1;
+//     }
+// }
+// .fade-in{
+//     animation: fade-in 400ms ease-in-out forwards;
+// }
+
+// @keyframes fade-out {
+//     from{
+//         visibility: visible;
+//         opacity: 1;
+//     }
+//     99%{
+//         visibility: visible;
+//         opacity: 0;
+//     }
+//     to{
+//         visibility: hidden;
+//         opacity: 0;
+//     }
+// }
+
+// .fade-out{
+//     animation: fade-out 400ms ease-in-out forwards;
+// }
+
+
 @keyframes fade-in {
-    from{
+    from {
         visibility: hidden;
         opacity: 0;
     }
@@ -11,25 +48,29 @@
         opacity: 1;
     }
 }
+
 .fade-in{
+    
     animation: fade-in 400ms ease-in-out forwards;
 }
 
 @keyframes fade-out {
-    from{
+    from {
         visibility: visible;
         opacity: 1;
     }
     99%{
-        visibility: visible;
+        visibility: visible ;
         opacity: 0;
+
     }
     to{
-        visibility: hidden;
         opacity: 0;
     }
+
 }
 
 .fade-out{
-    animation: fade-in 400ms ease-in-out forwards;
+    display: none;
+    animation: fade-out 400ms ease-in-out forwards;
 }
