--- a/app/style/_header.scss
+++ b/app/style/_header.scss
@@ -3,8 +3,8 @@
     // Open Hambugger Style
 &.open {
   
-    .header__menu{ 
-            > span:first-child{
+    .header__toggle{ 
+        > span:first-child{
         transform: rotate(45deg);
     }
     > span:nth-child(2){
@@ -16,19 +16,18 @@
     }
 }
 .overlay{
-    
-    opacity: 0;
-    position: fixed;
-    top: 5.75rem;
-    left: 0;
-    right: 0px;
-    bottom: 0px;
-    background-color: #1090CB1A;
-    
+        opacity: 0;
+        position: fixed;
+        top: 5.625rem;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background: linear-gradient(left  to right,  $color3 $color4);
 }
 
     nav{
-        padding: 1.9375rem 1.8rem;
+        padding-top: 1.6255rem;
+        padding-bottom:  1.625rem;
         border-bottom: 0.04375rem solid $color4;
     }
 
@@ -41,8 +40,8 @@
     line-height: normal;
     color: $color2;
     }
-    // Mobile Menu
-    &__menu{
+    // Mobile Toggle
+    &__toggle{
         > span{
             display: block;
             width: 26px;
@@ -55,10 +54,28 @@
         &:not(:last-child){
             margin-bottom: 3px;
         }
+    }  
     }
-       
-        
+
+
+    &__menu{
+        background-color: $color1;
+        padding: 1.625rem;
+        margin: 0px  1.8rem;
+        border-radius: 3px;
+        position: absolute;
+        width: calc(100% - 3rem);
+        left: 50%;
+        transform: translateX(-50%);
+        a{
+            color: $color3;
+            padding: 0.625rem;
+            display: block;
+            text-align: center;
+        }
+    
     }
+
     &__links{
         a{
             position: relative;
