--- a/app/style/style.css
+++ b/app/style/style.css
@@ -25,12 +25,12 @@
     opacity: 0;
   }
   to {
-    visibility: hidden;
     opacity: 0;
   }
 }
 .fade-out {
-  animation: fade-in 400ms ease-in-out forwards;
+  display: none;
+  animation: fade-out 400ms ease-in-out forwards;
 }
 
 html {
@@ -53,6 +53,11 @@ body {
 
 a, a:visited, a:hover {
   text-decoration: none;
+}
+
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .flex {
@@ -92,26 +97,27 @@ button {
   }
 }
 
-.header.open .header__menu > span:first-child {
+.header.open .header__toggle > span:first-child {
   transform: rotate(45deg);
 }
-.header.open .header__menu > span:nth-child(2) {
+.header.open .header__toggle > span:nth-child(2) {
   opacity: 0;
 }
-.header.open .header__menu > span:last-child {
+.header.open .header__toggle > span:last-child {
   transform: rotate(-45deg);
 }
 .header .overlay {
   opacity: 0;
   position: fixed;
-  top: 5.75rem;
+  top: 5.625rem;
+  right: 0;
   left: 0;
-  right: 0px;
-  bottom: 0px;
-  background-color: rgba(16, 144, 203, 0.1019607843);
+  bottom: 0;
+  background: linear-gradient(left to right, #000 #C4C4C4);
 }
 .header nav {
-  padding: 1.9375rem 1.8rem;
+  padding-top: 1.6255rem;
+  padding-bottom: 1.625rem;
   border-bottom: 0.04375rem solid #C4C4C4;
 }
 .header__logo {
@@ -122,7 +128,7 @@ button {
   line-height: normal;
   color: #1090CB;
 }
-.header__menu > span {
+.header__toggle > span {
   display: block;
   width: 26px;
   height: 2px;
@@ -130,8 +136,24 @@ button {
   transition: all 300ms ease-in-out;
   transform-origin: 3px 1px;
 }
-.header__menu > span:not(:last-child) {
+.header__toggle > span:not(:last-child) {
   margin-bottom: 3px;
+}
+.header__menu {
+  background-color: #FFFFFF;
+  padding: 1.625rem;
+  margin: 0px 1.8rem;
+  border-radius: 3px;
+  position: absolute;
+  width: calc(100% - 3rem);
+  left: 50%;
+  transform: translateX(-50%);
+}
+.header__menu a {
+  color: #000;
+  padding: 0.625rem;
+  display: block;
+  text-align: center;
 }
 .header__links a {
   position: relative;
