--- a/app/style/_header.scss
+++ b/app/style/_header.scss
@@ -22,7 +22,7 @@
         right: 0;
         left: 0;
         bottom: 0;
-        background: linear-gradient(left  to right,  $color3 $color4);
+        background: linear-gradient($color4, $color2 );
 }
 
     nav{
@@ -61,12 +61,12 @@
     &__menu{
         background-color: $color1;
         padding: 1.625rem;
-        margin: 0px  1.8rem;
-        border-radius: 3px;
+        border-radius: 5px;
         position: absolute;
-        width: calc(100% - 3rem);
+        width: calc(100% - 5rem);
         left: 50%;
         transform: translateX(-50%);
+        margin-top: 1.5rem;
         a{
             color: $color3;
             padding: 0.625rem;
