--- a/app/style/_globals.scss
+++ b/app/style/_globals.scss
@@ -13,6 +13,11 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size: $font-md;
     color: $color3;
+
+
+    &.noscroll{
+        overflow: hidden;
+    }
 }
 a, a:visited, a:hover{
     text-decoration: none;
