--- a/app/style/_header.scss
+++ b/app/style/_header.scss
@@ -18,7 +18,7 @@
 .overlay{
         opacity: 0;
         position: fixed;
-        top: 5.625rem;
+        top: 0rem;
         right: 0;
         left: 0;
         bottom: 0;
@@ -26,6 +26,8 @@
 }
 
     nav{
+        position: relative;
+        background-color: $color1;
         padding-top: 1.6255rem;
         padding-bottom:  1.625rem;
         border-bottom: 0.04375rem solid $color4;
