--- a/app/style/_variables.scss
+++ b/app/style/_variables.scss
@@ -3,7 +3,9 @@
 $color1: #FFFFFF;
 $color2: #1090CB;
 $color3: #000;
-$color4: #C4C4C4;
+$color4: #c4c4c4;
+$color5:  #1090cb1a;
+$color6: #5C5C5C;
 
 // Font sizes
 $font-sm: 0.875rem;  // 14px 
