--- a/app/style/_globals.scss
+++ b/app/style/_globals.scss
@@ -29,6 +29,8 @@ a, a:visited, a:hover{
 
 //spacing
 .container {
+    max-width: 69.375rem;
+    margin: 0 auto;
     padding-left: 1.5rem;
     padding-right:  1.5rem;
 }
