--- a/app/style/_header.scss
+++ b/app/style/_header.scss
@@ -41,6 +41,7 @@
     font-weight: 700;
     line-height: normal;
     color: $color2;
+    transition: 200ms;
     }
     // Mobile Toggle
     &__toggle{
