--- a/app/style/_hero.scss
+++ b/app/style/_hero.scss
@@ -1,14 +1,28 @@
 .hero{
  background: $color5;
+ 
+ @include breakpoint-up(large){
+    display: flex;
+    align-items: center;
+ }
 
     &__img{
-        background-image: url('/asses/Ellipse1.svg');
+        background-image: url('/assets/Ellipse1.svg');
         background-size: 52%;
         background-repeat: no-repeat;
         background-position: right ;
         min-height: 17.5rem;
         position: relative;
         
+        @include breakpoint-up(large){
+            flex: 3;
+            order: 2;
+            height: 41rem;
+            margin-top: -10rem;
+            margin-bottom: 2rem;
+            background-image: url('/assets/Ellipse1.svg');
+            background-position: right center;
+        }
         &::before{
             content: ' ';
             height: 100%;
@@ -19,10 +33,15 @@
             background-position: center ;
             position: absolute;
         }
+     
     }
 
     &__text{
         text-align: center;
+        @include breakpoint-up(large){
+            flex: 2;
+            order: 1;
+         }
         h1{
         color: $color3;
         font-family: $font-fam;
@@ -51,3 +70,4 @@ margin-bottom: 2.25rem;
         }
     }
 }
+
