--- a/app/style/_variables.scss
+++ b/app/style/_variables.scss
@@ -10,7 +10,7 @@ $color6: #5C5C5C;
 // Font sizes
 $font-sm: 0.875rem;  // 14px 
 $font-md: 1.125rem;  // 18px
-
+$font-lg: 3.25rem;
 
 // Font family 
 
