--- a/app/style/_hero.scss
+++ b/app/style/_hero.scss
@@ -1,6 +1,7 @@
 .hero{
  background: $color5;
  
+
  @include breakpoint-up(large){
     display: flex;
     align-items: center;
@@ -38,9 +39,11 @@
 
     &__text{
         text-align: center;
+        margin-bottom: 3rem;
         @include breakpoint-up(large){
             flex: 2;
             order: 1;
+            margin-bottom: 1.5rem;
          }
         h1{
         color: $color3;
@@ -53,13 +56,11 @@
         
     
             @include breakpoint-up(large){
-                font-size: $font-lg;
+                font-size: $font-xlg;
             }
     }
         h1 span{
         color: $color2;
-        font-family: $font-fam;
-        font-size: 2.5rem;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
@@ -76,3 +77,32 @@ margin-bottom: 2.25rem;
     }
 }
 
+
+.abt{
+    background-color: $color1;
+    text-align: center;
+    justify-content: center;
+    margin: 4.175rem 15rem;
+    
+
+    h2{
+        color: $color3;
+        text-align: center;
+        font-family: $font-fam;
+        font-size: $font-lg;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 160%; /* 52.8px */
+flex-shrink: 0;
+    }
+
+    p{
+        color: $color4;
+text-align: center;
+font-family: $font-fam;
+font-size: $font-md;
+font-style: normal;
+font-weight: 400;
+line-height: 175%; /* 31.5px */
+    }
+}
