--- a/app/style/style.css
+++ b/app/style/style.css
@@ -240,11 +240,13 @@ button.view {
 }
 .hero__text {
   text-align: center;
+  margin-bottom: 3rem;
 }
 @media (min-width: 64em) {
   .hero__text {
     flex: 2;
     order: 1;
+    margin-bottom: 1.5rem;
   }
 }
 .hero__text h1 {
@@ -263,8 +265,6 @@ button.view {
 }
 .hero__text h1 span {
   color: #1090CB;
-  font-family: "Poppins", sans-serif;
-  font-size: 2.5rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -277,4 +277,30 @@ button.view {
   font-weight: 400;
   line-height: 204.3%; /* 32.688px */
   margin-bottom: 2.25rem;
+}
+
+.abt {
+  background-color: #FFFFFF;
+  text-align: center;
+  justify-content: center;
+  margin: 4.175rem 15rem;
+}
+.abt h2 {
+  color: #000;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 160%; /* 52.8px */
+  flex-shrink: 0;
+}
+.abt p {
+  color: #c4c4c4;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 175%; /* 31.5px */
 }/*# sourceMappingURL=style.css.map */
