--- a/app/style/style.css
+++ b/app/style/style.css
@@ -123,6 +123,14 @@ button.view {
   }
 }
 
+.views {
+  background-image: url("/assets/Vector 4.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 33rem;
+}
+
 .header.open .header__toggle > span:first-child {
   transform: rotate(45deg);
 }
