--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'mixins';
 @import 'animations';
+@import 'phase';
 @import 'globals';    
 @import 'header';
 @import 'hero';
