--- a/app/style/style.css
+++ b/app/style/style.css
@@ -44,11 +44,55 @@
   background-repeat: no-repeat;
   background-position: center;
   height: 100%;
-  display: block;
+  display: flex;
   margin-top: 3rem;
 }
-.phase__phaseHero {
+@media (min-width: 64em) {
+  .phase {
+    display: flex;
+    align-items: center;
+  }
+}
+.phase__img {
   display: flex;
+  background-image: url("/assets/Activities.png");
+  height: 40rem;
+  background-repeat: no-repeat;
+  margin-top: 4rem;
+}
+@media (min-width: 64em) {
+  .phase__img {
+    flex: 3;
+    order: 2;
+    height: 41rem;
+    margin-top: -10rem;
+    margin-bottom: 2rem;
+  }
+}
+.phase__text {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+@media (min-width: 64em) {
+  .phase__text {
+    flex: 2;
+    order: 1;
+    margin-bottom: 1.5rem;
+  }
+}
+.phase__text h1 {
+  color: #000;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 64em) {
+  .phase__text h1 {
+    font-size: 0.875rem;
+  }
 }
 
 html {
