--- a/app/style/_phase.scss
+++ b/app/style/_phase.scss
@@ -4,15 +4,15 @@
     background-repeat: no-repeat;
     background-position: center;
     height: 100%;
-    display: flex;
-    margin-top: 3rem;
+    display: block;
+    margin-top: rem;
 
     @include breakpoint-up(large){
         display: flex;
         align-items: center;
      }
-   
-    &__img{
+   .phaseHero{
+        &__img{
        display: flex;
        background-image: url('/assets/Activities.png');
        height: 40rem;
@@ -50,4 +50,6 @@
             }
     }
     }
+   }
+
 }
