i have made the phase class display of flex

--- a/app/style/_hero.scss
+++ b/app/style/_hero.scss
@@ -84,7 +84,7 @@
     text-align: center;
     justify-content: center;
     margin: 4.175rem 15rem;
-    
+    margin-bottom: 4rem;
 
     h2{
         color: $color3;
