--- a/app/style/_phase.scss
+++ b/app/style/_phase.scss
@@ -55,5 +55,23 @@
 // }
 .phase{
     display: inline;
-    margin-top: 5rem;
+    margin-top: -5rem;
+    background-color: $color2;
+
+
+
+    &__Hero{
+        display: flex;
+        background-color: $color2;
+        width: 100%;
+
+        &__img{
+            background: transparent;
+            border-radius: 50px;
+            width: 10%;
+        }
+
+    }
+     \
+     ]'[;p9lkiujtrgwa`567890-M MN   `   
 }
