--- a/app/style/style.css
+++ b/app/style/style.css
@@ -39,24 +39,22 @@
 }
 
 .phase {
-  display: inline;
-  margin-top: -5rem;
-  background-color: #1090CB;
+  background-image: url("/assets/Vector4.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  min-height: 17.5rem;
+  position: relative;
+  margin-top: 2rem;
 }
 .phase__Hero {
   display: flex;
-  background-color: #1090CB;
-  width: 100%;
-}
-.phase__Hero__img {
-  background: transparent;
-  border-radius: 50px;
-  width: 10%;
 }
 
 html {
   font-size: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *, *::before, *::after {
@@ -103,28 +101,40 @@ a, a:visited, a:hover {
   align-items: center;
 }
 
-button.contact {
+button {
   padding: 0.625rem 1.625rem;
   border-radius: 6px;
   border: none;
   cursor: pointer;
-  color: #FFFFFF;
-  background-color: #1090CB;
   font-weight: 500;
   font-family: "Poppins", sans-serif;
   font-size: 0.8125rem;
+  transition: all 0.3s ease-out;
+}
+
+button.contact {
+  color: #FFFFFF;
+  background-color: #1090CB;
 }
 
 button.view {
-  padding: 0.625rem 1.625rem;
-  border-radius: 6px;
-  cursor: pointer;
   color: #1090CB;
   background-color: #FFFFFF;
-  font-weight: 400;
-  font-family: "Poppins", sans-serif;
-  font-size: 0.8125rem;
   border: 1px solid #1090CB;
+}
+
+button.contact:hover {
+  transition: all 0.3s ease-out;
+  color: #1090CB;
+  background-color: #FFFFFF;
+  border: 1px solid #1090CB;
+}
+
+button.view:hover {
+  transition: all 0.3s ease-out;
+  color: #FFFFFF;
+  background-color: #1090CB;
+  border: 1px solid #FFFFFF;
 }
 
 @media (max-width: 63em) {
