--- a/app/style/style.css
+++ b/app/style/style.css
@@ -40,23 +40,25 @@
 
 .phase {
   background-image: url("/assets/Vector4.svg");
-  background-size: cover;
   background-repeat: no-repeat;
-  background-position: right;
-  min-height: 17.5rem;
-  position: relative;
-  stroke-width: 1px;
-  stroke: #999;
-  margin-top: 2rem;
+  background-position: center;
+  background-size: 50%;
 }
-.phase__Hero {
-  display: flex;
-  margin-top: 1rem;
+@media (min-width: 64em) {
+  .phase__Hero {
+    display: flex;
+    flex: 1;
+  }
 }
 .phase__text {
-  width: 32.25rem;
-  height: 5.68rem;
-  flex-shrink: 0;
+  font-size: 1.125rem;
+  margin-top: 4rem;
+  margin-left: 2rem;
+}
+@media (min-width: 64em) {
+  .phase__text {
+    font-size: 1.25rem;
+  }
 }
 .phase__text h1 {
   color: #000;
@@ -68,11 +70,22 @@
 }
 .phase__text h1 span {
   color: #1090CB;
-  font-family: Poppins;
+  font-family: "Poppins", sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 600;
   line-height: 170%; /* 51px */
+}
+.phase__img {
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+@media (min-width: 64em) {
+  .phase__img {
+    height: 30rem;
+    width: 50%;
+  }
 }
 
 html {
@@ -333,26 +346,41 @@ button.view:hover {
 .abt {
   background-color: #FFFFFF;
   text-align: center;
-  justify-content: center;
-  margin: 4.175rem 15rem;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 }
-.abt h2 {
+@media (min-width: 64em) {
+  .abt {
+    flex: 2;
+    order: 1;
+    margin: 1.5rem;
+  }
+}
+.abt h1 {
   color: #000;
-  text-align: center;
   font-family: "Poppins", sans-serif;
-  font-size: 1.25rem;
+  font-size: 2.5rem;
   font-style: normal;
   font-weight: 600;
-  line-height: 160%; /* 52.8px */
-  flex-shrink: 0;
+  line-height: normal;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 64em) {
+  .abt h1 {
+    font-size: 3.25rem;
+  }
+}
+.abt h1 span {
+  color: #1090CB;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
 .abt p {
   color: #c4c4c4;
-  text-align: center;
   font-family: "Poppins", sans-serif;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-style: normal;
-  font-weight: 500;
-  line-height: 175%; /* 31.5px */
+  font-weight: 400;
+  line-height: 204.3%; /* 32.688px */
+  margin-bottom: 2.25rem;
 }/*# sourceMappingURL=style.css.map */
