--- a/app/style/_variables.scss
+++ b/app/style/_variables.scss
@@ -6,6 +6,7 @@ $color3: #000;
 $color4: #c4c4c4;
 $color5:  #1090cb1a;
 $color6: #5C5C5C;
+$color7: #f4f4f4;
 
 // Font sizes
 $font-sm: 0.875rem;  // 14px 
