--- a/app/style/_variables.scss
+++ b/app/style/_variables.scss
@@ -7,7 +7,8 @@ $color4: #c4c4c4;
 $color5:  #1090cb1a;
 $color6: #5C5C5C;
 $color7: #f4f4f4;
-
+$color8:  #E8F4FA;
+$color9:   #252525; 
 // Font sizes
 $font-sm: 0.875rem;  // 14px 
 $font-md: 1.125rem;  // 18px
